--- a/React/src/index.css
+++ b/React/src/index.css
@@ -97,6 +97,7 @@ label {
   background-color: rgba(0, 0, 0, 0.06);
   font-family: 'Poppins', sans-serif;
   font-size: 12px;
+  height: 41px;
 }
 
 .circular-icon-btn {
